# rocket-auth-sqlite

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: db.rs  lib.rs  main.rs
src/routes/: auth.rs  dashboard.rs  index.rs  mod.rs
templates/: dashboard.html.tera  index.html.tera  register.html.tera
tests/: routes_test.rs
tests/common/: mod.rs
