[package]
name = "auth_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.1"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }

